[package]
name = "mux-runtime"
version = "0.1.2"
edition = "2024"
description = "Runtime library for the Mux programming language"
authors = ["Derek Corniello"]
repository = "https://github.com/DerekCorniello/mux-lang"
license = "MIT"
keywords = ["mux", "runtime", "language"]
categories = ["development-tools", "compilers"]
exclude = [
    "../test_scripts/",
    "../run_all_test_scripts.sh",
    "../run_all_error_cases.sh",
    "../mux-website/",
    "../AGENTS.md",
    "../CONTRIBUTING.md"
]

[lib]
name = "mux_runtime"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
gc = "0.4"
ordered-float = "4.0"
lazy_static = "1.4"
libc = "0.2"
paste = "1.0"
