[package]
name = "mux-runtime"
version = "0.2.0"
edition = "2021"
description = "Runtime library for the Mux programming language"
authors = ["Derek Corniello"]
repository = "https://github.com/DerekCorniello/mux-lang"
license = "MIT"
keywords = ["mux", "runtime", "language"]
categories = ["development-tools", "compilers"]
exclude = [
    "../test_scripts/",
    "../run_all_test_scripts.sh",
    "../run_all_error_cases.sh",
    "../mux-website/",
    "../AGENTS.md",
    "../CONTRIBUTING.md"
]

[lib]
name = "mux_runtime"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
gc = "0.4"
ordered-float = "4.0"
lazy_static = "1.4"
libc = "0.2"
paste = "1.0"
chrono = "0.4"
serde_json = "1.0"
csv = "1"
ureq = "2.10"
httparse = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
postgres = "0.19"
mysql = "28"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Kernel", "Win32_System_Threading"] }
